testsuite/positive/Issue-git-0340.n
using System;
using System.Console;

module Program
{
  Main() : void
  {
    WriteLine((typeof(Test).GetCustomAttributes(typeof(MyAtr), false)[0] :> MyAtr).prop);
  }
}

[AttributeUsage(AttributeTargets.Class)]
class MyAtr : Attribute
{
  public prop : object { get; set; }
}

[MyAtr(prop = "OK")]
class Test
{
}

/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/