testsuite/negative/external-extensions-lib2.n
using System;

namespace Test
{
 [AttributeUsage (AttributeTargets.Class | AttributeTargets.Method)]
 public class TestAttribute : Attribute
 {
 }
}
